--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.10.0",
     "clsx": "^2.1.1",
+    "country-flag-icons": "^1.5.19",
     "dateformat": "^5.0.3",
     "dompurify": "^3.2.6",
     "framer-motion": "^12.18.1",
