--- a/package.json
+++ b/package.json
@@ -10,21 +10,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@notionhq/client": "^3.1.3",
+    "@notionhq/client": "4.0.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
-    "axios": "^1.10.0",
     "clsx": "^2.1.1",
     "country-flag-icons": "^1.5.19",
     "dateformat": "^5.0.3",
     "dompurify": "^3.2.6",
-    "framer-motion": "^12.19.1",
+    "framer-motion": "^12.22.0",
     "next": "15.4.0",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-hook-form": "^7.58.1",
+    "react-hook-form": "^7.59.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-medium-image-zoom": "^5.2.14",
@@ -32,15 +31,15 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
-    "@tailwindcss/postcss": "^4.1.10",
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/dateformat": "^5.0.3",
-    "@types/node": "^24.0.3",
+    "@types/node": "^24.0.8",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9.29.0",
+    "eslint": "^9.30.0",
     "eslint-config-next": "15.3.4",
-    "tailwindcss": "^4.1.10",
+    "tailwindcss": "^4.1.11",
     "typescript": "^5.8.3"
   }
 }
